--- a/Code_X_Mania/template/req.html
+++ b/Code_X_Mania/template/req.html
@@ -37,10 +37,13 @@
               'progress', 
               'current-time',
               'duration',
+              'mute',
+              'volume',
               'captions',
               'settings',
               'pip',
               'airplay',
+              'download',
               'fullscreen'
             ];
         document.addEventListener('DOMContentLoaded', () => {
