--- a/Code_X_Mania/template/req.html
+++ b/Code_X_Mania/template/req.html
@@ -26,6 +26,12 @@
     <div class="container">
         <tag src="%s" class="player"></tag>
     </div>
+	
+	
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7441885645727963"
+
+     crossorigin="anonymous"></script>
+	
      
     <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
 	<script>
